--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "aa-isbns-visualize-app",
-    "private": true,
+    "private": false,
     "version": "0.0.0",
+    "homepage": "https://backrndsource.github.io/aa-isbns-visualize-app/",
     "type": "module",
     "scripts": {
         "predeploy": "npm run build",
@@ -29,6 +30,7 @@
         "eslint": "^9.17.0",
         "eslint-plugin-react-hooks": "^5.0.0",
         "eslint-plugin-react-refresh": "^0.4.16",
+        "gh-pages": "^6.3.0",
         "globals": "^15.14.0",
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.18.2",
