--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-public/tiles
-
 # Logs
 logs
 *.log
@@ -10,7 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-# dist
+dist
 dist-ssr
 *.local
 
